[tool.poetry]
name = "all-lektor-packages"
version = "0.1.0"
description = "Utility to list/download all know Lektor-related packages/plugins"
license = "MIT"
readme = "README.md"
keywords = ["lektor"]
homepage = "https://github.com/dairiki/all-lektor-packages/"
repository = "https://github.com/dairiki/all-lektor-packages.git"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Lektor",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
authors = ["Jeff Dairiki <dairiki@dairiki.org>"]

[tool.poetry.dependencies]
python = "^3.9"
packaging = "^21.3"
requests = "^2.27.1"
setuptools = "^60.9.3"

[tool.poetry.dev-dependencies]
types-pkg-resources = "^0.1.3"
types-requests = "^2.27.11"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
